# micromech

./: .dockerignore  .gitignore  .gitleaksignore  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  secrets.env.example
.github/workflows/: ci.yml  release.yml
docker/: requirements.txt
docs/: delivery_peak_experiment_plan.md  micromech_delivery_recovery_plan_20260501.md
scripts/: anvil_fallback_delivery_test.py  anvil_fund.py  demo_requests.py  quickstart.sh  recover_open_requests.py  recover_service.py  repair-updater.sh  test_tools_onchain.py  updater.sh
src/micromech/: __init__.py  __main__.py  cli.py  management.py  metadata_manager.py  migrations.py  secrets.py
src/micromech/bot/: __init__.py  app.py  formatting.py  security.py
src/micromech/bot/commands/: addresses.py  checkpoint.py  claim.py  contracts.py  info.py  last_rewards.py  logs.py  manage.py  queue_cmd.py  restart.py  schedule.py  sell.py  settings.py  status.py  update.py  wallet.py  withdraw.py
src/micromech/core/: address_book.py  bridge.py  config.py  constants.py  errors.py  locks.py  marketplace.py  models.py  persistence.py  secrets_file.py
src/micromech/integration/: iwa_bridge.py
src/micromech/ipfs/: __init__.py  client.py  metadata.py
src/micromech/management/: __init__.py
src/micromech/runtime/: contracts.py  delivery.py  executor.py  http.py  listener.py  manager.py  metrics.py  queue_scanner.py  server.py
src/micromech/tasks/: auto_sell.py  checkpoint.py  failed_deliveries_alert.py  fund.py  health.py  low_balance_alert.py  metadata_check.py  notifications.py  payment_withdraw.py  profitability_check.py  rewards.py  scheduler.py  update_check.py  update_result.py  watchdog.py  xdai_sweep.py
src/micromech/tools/: _groq_common.py  base.py  registry.py  valory_compat.py
src/micromech/tools/builtin/: echo.py  llm.py  prediction.py
src/micromech/tools/builtin/echo_tool/: __init__.py  component.yaml  echo_tool.py
src/micromech/tools/builtin/llm_tool/: __init__.py  component.yaml  llm_tool.py
src/micromech/tools/builtin/prediction_request/: __init__.py  component.yaml  prediction_request.py
src/micromech/tools/echo_tool/: component.yaml  echo_tool.py
src/micromech/tools/gemma4_api_tool/: __init__.py  component.yaml  gemma4_api_tool.py
src/micromech/tools/llm_tool/: component.yaml  llm_tool.py
src/micromech/tools/local_llm/: component.yaml  local_llm.py
src/micromech/tools/prediction_request/: component.yaml  prediction_request.py
src/micromech/tools/prediction_request_reasoning/: component.yaml  prediction_request_reasoning.py
src/micromech/tools/superforcaster/: component.yaml  superforcaster.py
src/micromech/web/: app.py  dependencies.py
src/micromech/web/templates/: dashboard.html  setup.html
tests/: conftest.py
tests/anvil/: test_payment_withdraw_anvil.py
tests/integration/: conftest.py  test_anvil_e2e.py  test_benchmark.py  test_full_cycle_e2e.py  test_ipfs_push.py  test_llm_tool.py  test_multichain_e2e.py  test_payment_withdraw_anvil.py  test_recover_open_requests_live.py  test_web_wizard_e2e.py
tests/unit/: conftest.py  test_address_book.py  test_bot_addresses.py  test_bot_app.py  test_bot_callbacks.py  test_bot_commands.py  test_bot_commands_md.py  test_bot_formatting.py  test_bot_formatting_md.py  test_bot_md_injection.py  test_bot_new_commands.py  test_bot_security.py  test_bot_settings.py  test_bot_test_master_gaps.py  test_bot_withdraw.py  test_bridge.py  test_checkpoint.py  test_cli.py  test_cli_extra.py  test_concurrent_delivery.py  test_config.py  test_config_no_service_fields.py  test_config_tasks.py  test_contracts.py  test_coverage_extra.py  test_delivery.py  test_delivery_extra.py  test_demo_ipfs.py  test_errors.py  test_executor.py  test_failed_deliveries_alert.py  test_groq_common.py  test_heartbeat.py  test_http.py  test_http_extra.py  test_ipfs.py  test_iwa_bridge.py  test_listener.py  test_management.py  test_manager_extra.py  (+40 more)
tools/custom/: __init__.py
