[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micromech"
version = "0.0.28"
description = "Lightweight OLAS mech runtime"
requires-python = ">=3.12,<4.0"
license = "MIT"
authors = [
    { name = "David Vilela", email = "david.vilela@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "peewee>=3.17.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.3",
    "aiohttp>=3.9.0",
    "ddgs>=9.12.1",
    "iwa>=0.7.8",
]

[project.urls]
Repository = "https://github.com/dvilelaf/micromech"

[project.optional-dependencies]
chain = [
    "iwa>=0.7.8",
]
telegram = [
    "python-telegram-bot>=21.0",
]
tasks = [
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
]
llm = [
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.19.0",
]
genai = [
    "google-genai>=1.0.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
]
cli = [
    "typer>=0.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-forked>=1.6.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
]

[project.scripts]
micromech = "micromech.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/micromech"]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "timeout: mark test with a timeout in seconds",
]
addopts = "--cov=src/micromech --cov-report=term-missing"

[tool.coverage.run]
source = ["src/micromech"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B106", "B107", "B110", "B112", "B615"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = ["union-attr", "no-redef", "return-value", "var-annotated", "attr-defined", "import-untyped"]
